# projeto-buscador

./: Dockerfile  LAWSUIT_FLOW.md  Makefile  README.md  USER_FLOW.md  docker-compose.yml
backend-graphql/: Dockerfile
coletas-api/: README.md
coletas-api/coletasAPI/: Dockerfile  pyproject.toml
coletas-api/coletasAPI/coletasapi/: __init__.py  main.py
coletas-api/coletasAPI/coletasapi/connections/: lawsuit_raw_producer.py
coletas-api/coletasAPI/coletasapi/controllers/: __init__.py  controllers.py
coletas-api/coletasAPI/coletasapi/databases/: mongo.py
coletas-api/coletasAPI/coletasapi/helpers/: __init__.py  auxiliares.py  object_schema.json  response_schema.json  schema.json
coletas-api/coletasAPI/coletasapi/middlewares/: __init__.py  error_handler.py  parser.py
coletas-api/coletasAPI/coletasapi/models/: __init__.py  models.py
coletas-api/coletasAPI/coletasapi/services/: __init__.py  services.py
coletas-api/coletasAPI/tests/: Dockerfile  __init__.py  crawler.py  response_crawler.json  test_html.txt  test_lawsuit.py  test_response.json
frontend-boilerplate/: Dockerfile
frontend-boilerplate/src/pages/: index.tsx
kb-kafka-pipeline/: README.md
kb-kafka-pipeline/classifier/: main.py  pyproject.toml
kb-kafka-pipeline/classifier/tests/integration-tests/: test_classifier_integration.py  test_message.json
kb-kafka-pipeline/classifier/tests/unit-tests/: test_identifier.py
kb-kafka-pipeline/classifier/utils/: legalDataObject.py  sensitiveDataIdentifier.py
kb-kafka-pipeline/db_sync/: main.py  pyproject.toml
kb-kafka-pipeline/initial_payload_producer/: lawsuit.json
kb-kafka-pipeline/parser/: main.py  pyproject.toml
kb-kafka-pipeline/parser/tests/integration-tests/: test_message.json  test_parser_integration.py
kb-kafka-pipeline/parser/tests/unit-tests/: input.json  output.json  test_parser.py
kb-kafka-pipeline/parser/utils/: __init__.py  normalizer.py  parser.py
search/: README.md
search/indexer/: Dockerfile  README.md  main.py  pyproject.toml
search/indexer/indexer/resources/: index.json
search/indexer/indexer/typings/: database.py  index.py
search/indexer/indexer/utils/: utils.py
search/indexer/populate-by-collector/: populate.py
search/indexer/tests/integration-tests/: test_index_integration.py
search/indexer/tests/integration-tests/data/: test_message.json  test_response.json
search/indexer/tests/unit-tests/: test_index_utils.py
search/searcher/: Dockerfile  README.md  main.py  pyproject.toml
search/searcher/schema/: response.json
search/searcher/searcher/controllers/: controller.py
search/searcher/searcher/middlewares/: getPostgresLawsuit.py  query_intention.py
search/searcher/searcher/typings/: database.py  lawsuit.py  query_handler.py  searcher.py
search/searcher/searcher/utils/: checker.py  utils.py
search/searcher/tests/unit-tests/: test_searcher_utils.py
(+9 files in other folders)
